# octo-notify

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md  cliff.toml  dispatch.example.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
examples/: dispatch.example.toml  inbox.rs  watch.rs
src/: auth.rs  client.rs  error.rs  lib.rs  pagination.rs  rate_limit.rs
src/app/: filter.rs  mod.rs  poller.rs  store.rs
src/cli/: args.rs  inbox.rs  mark_read.rs  mod.rs  subscribe.rs  subscriptions.rs  thread.rs  util.rs  watch.rs
src/endpoints/: bulk.rs  mod.rs  notifications.rs  repo.rs  subscriptions.rs  threads.rs
src/models/: mod.rs  notification.rs  reason.rs  repository.rs  subject.rs  subscription.rs
tests/: bulk.rs  coverage.rs  file_store.rs  ghes.rs  live.rs  notifications.rs  poller.rs  retry.rs  sqlite_store.rs  token_refresh.rs
tests/fixtures/: notifications_page1.json  notifications_page2.json  repo_subscription.json  subscription.json  subscriptions_page1.json  subscriptions_page2.json  thread.json
