[package]
name = "octo-notify"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "A focused Rust client and polling engine for the GitHub Notifications API"
repository = "https://github.com/joshrotenberg/octo-notify"
keywords = ["github", "notifications", "api", "async"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
url = { version = "2", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
secrecy = "0.10"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
