[package]
name = "octo-notify"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "A focused Rust client and polling engine for the GitHub Notifications API"
repository = "https://github.com/joshrotenberg/octo-notify"
homepage = "https://github.com/joshrotenberg/octo-notify"
documentation = "https://docs.rs/octo-notify"
readme = "README.md"
keywords = ["github", "notifications", "api", "async"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "charset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
url = { version = "2", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
secrecy = "0.10"
tracing = { version = "0.1", optional = true }
rusqlite = { version = "0.40", features = ["bundled"], optional = true }
clap = { version = "4", features = ["derive"], optional = true }
anstyle = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
toml = { version = "1.1", optional = true }
futures = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
tokio = { version = "1", optional = true, features = ["time"] }
tokio-util = { version = "0.7", optional = true }

[features]
default = ["rustls", "stream"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
# Async pagination streams (Layer 1) and the poller engine (Layer 2 + 3).
stream = ["dep:futures", "dep:async-stream", "dep:tokio", "dep:tokio-util"]
# File-backed StateStore (JsonFileStore) for cross-restart dedupe.
file-store = ["stream"]
# SQLite-backed StateStore (SqliteStore).
sqlite-store = ["stream", "dep:rusqlite"]
# RefreshingToken: a caching, auto-refreshing TokenProvider for expiring credentials.
token-refresh = ["dep:tokio", "tokio/sync"]
# RetryPolicy: auto-retry rate-limited one-shot calls.
retry = ["dep:tokio", "tokio/time"]
# Structured tracing instrumentation across the client and poller.
tracing = ["dep:tracing"]
# The octo-notify command-line tool (binary). Batteries-included: poller, file state, retry.
cli = [
    "stream",
    "file-store",
    "retry",
    "dep:clap",
    "dep:anstyle",
    "dep:anyhow",
    "dep:toml",
    "dep:tokio",
    "tokio/rt-multi-thread",
    "tokio/macros",
    "tokio/signal",
    "tokio/process",
]

[[bin]]
name = "octo-notify"
path = "src/bin/octo-notify.rs"
required-features = ["cli"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
tokio-util = "0.7"
wiremock = "0.6"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["std"] }
tempfile = "3"
secrecy = "0.10"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
